[gd_scene load_steps=9 format=3 uid="uid://drlkj6nbveb47"]

[ext_resource type="Script" path="res://Scenes/Turrets/Tower+Bullets/MissileT1.gd" id="1_whavv"]
[ext_resource type="Texture2D" uid="uid://bcoo4p5d6j75h" path="res://Assets/Towers/towerDefense_tile180.png" id="2_llmgo"]
[ext_resource type="Texture2D" uid="uid://cqv700amogi0y" path="res://Assets/Towers/towerDefense_tile228.png" id="3_xmsq1"]
[ext_resource type="Texture2D" uid="uid://vw8kpocxwgkv" path="res://Assets/Towers/towerDefense_tile251.png" id="4_8qj5a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxgne"]
size = Vector2(53, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bf3uo"]
size = Vector2(72, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_nq4eq"]
radius = 200.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kov80"]
bg_color = Color(0, 1, 0, 0.168627)
corner_radius_top_left = 450
corner_radius_top_right = 450
corner_radius_bottom_right = 450
corner_radius_bottom_left = 450

[node name="Missile" type="StaticBody2D"]
script = ExtResource("1_whavv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_gxgne")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(27, -10)

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("2_llmgo")

[node name="Turret" type="Sprite2D" parent="."]
texture = ExtResource("3_xmsq1")

[node name="Missile" type="Sprite2D" parent="Turret"]
position = Vector2(5, -10)
texture = ExtResource("4_8qj5a")

[node name="Missile2" type="Sprite2D" parent="Turret"]
position = Vector2(5, 10)
texture = ExtResource("4_8qj5a")

[node name="TowerDetector" type="Area2D" parent="."]
process_mode = 3
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TowerDetector"]
process_mode = 3
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_bf3uo")

[node name="Tower" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_nq4eq")

[node name="Area" type="Panel" parent="."]
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kov80")

[node name="BulletContainer" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
